# ChangeLog for gnome-extra/libgda
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgda/ChangeLog,v 1.226 2014/04/26 20:04:01 pacho Exp $

  26 Apr 2014; Pacho Ramos <pacho@gentoo.org> -libgda-5.0.3-r1.ebuild,
  -libgda-5.0.4.ebuild:
  drop old

  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> libgda-5.2.2.ebuild:
  x86 stable, bug 499954

  09 Mar 2014; Pacho Ramos <pacho@gentoo.org> libgda-5.2.2.ebuild:
  amd64 stable, bug 499954

  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> libgda-5.2.2.ebuild:
  Fix wrong commit, bug 502160

*libgda-5.2.2 (09 Feb 2014)

  09 Feb 2014; Pacho Ramos <pacho@gentoo.org> +libgda-5.2.2.ebuild,
  -libgda-5.1.1-r1.ebuild, -libgda-5.1.2.ebuild:
  Version bump, drop old

  08 Dec 2013; Pacho Ramos <pacho@gentoo.org> libgda-5.0.4.ebuild:
  x86 stable, bug #478252

  30 Nov 2013; Pacho Ramos <pacho@gentoo.org> libgda-5.0.4.ebuild:
  amd64 stable, bug #478252

*libgda-5.1.2 (28 Jul 2013)

  28 Jul 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
  +libgda-5.1.2.ebuild, +files/libgda-5.1.2-graphviz.patch, metadata.xml:
  Version bump with various bugfixes.

  30 Jun 2013; Justin Lecher <jlec@gentoo.org> libgda-5.0.4.ebuild,
  libgda-5.1.1-r1.ebuild, metadata.xml:
  Fix usage of python-r1.eclass

*libgda-5.0.4 (06 Jun 2013)

  06 Jun 2013; Pacho Ramos <pacho@gentoo.org> +libgda-5.0.4.ebuild:
  Version bump

  30 Dec 2012; Alexandre Rostovtsev <tetromino@gentoo.org> metadata.xml:
  Fix bindist flag description (it disables firebird, not enables it).

  27 Dec 2012; Gilles Dartiguelongue <eva@gentoo.org> metadata.xml:
  Add local description for USE=bindist, bug #448922.

*libgda-5.1.1-r1 (17 Dec 2012)

  17 Dec 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  libgda-4.2.13.ebuild, libgda-5.0.3-r1.ebuild, +libgda-5.1.1-r1.ebuild,
  metadata.xml:
  Version bump to a 5.2 pre-release, which is needed for some gnome-3.6