@@ -10,14 +10,14 @@ AUX libgda-5.0.3-custom.vala 171 SHA256 28be89b84fdb22a38d7c0d9bb65e6d1a8ebfc3aa
 AUX libgda-5.1.2-graphviz.patch 3346 SHA256 29de3081c8fc5a8eaef92bfcc5bb4cf662faf22b96b8ac858af4a2ebe21198e0 SHA512 fdf43692755dee496a85532f1b155c36f1bfebc0c16b860a97e85172021f1b0131d94824283f175321bf63f44b6726dcb9d672544f7a7fc716a558d5535fa8b1 WHIRLPOOL 7a8bddfcc7a2014a10f6f894b1ae3488e6dda76d5a3e571760de5ac4525d90f4fb670e26fb9de627f59917869da33a66a3ecc0148af3a274debdd60da0a065a2
 DIST libgda-4.2.13.tar.xz 11247816 SHA256 25b75951f8f38fd58a403389566a0aae2f83b39d4225bc3acf5f2d68895ab4c3 SHA512 54506b65ac7127ab67168f8169aba4d366ea1c7f9e5401c27c00a7eee7ea5ce33821faef0c7f2d397455869bd98025990b527cb7ad8cca1a88d32bd699d44f22 WHIRLPOOL c958ecb735b5ba84236bd80f20f39017dca35911452ad95c65c82e4ee40eadecc683d78f7d459f65d576d520e309f19ceddf0da3054696d83261ebd141db13b8
 DIST libgda-5.2.2.tar.xz 12173216 SHA256 c9b8b1c32f1011e47b73c5dcf36649aaef2f1edaa5f5d75be20d9caadc2bc3e4 SHA512 b09ef364c3357a58b17508a39ee53ef462baa54bb3c8af580d23fd2771b034355092ecdb7ef29b29dd08533394a702f12b838732c712fb6b3a04b6b201cd3c74 WHIRLPOOL 463efc5825be741d55ab6741d250f537537d59c71d926c20c7202f384e5c7c9b2bcc49419a796df4bfa5e9248f59bcf12aa8331495c3aae7d56408f295c0693f
-EBUILD libgda-4.2.13.ebuild 3084 SHA256 0c62b2eb9a28bd9171b640d4822543a8e3b12b3c86e95eda16b66b7ff49876fb SHA512 f52006e896e7b5cf0365091bd360db2b46072eef90c0e8df6edea3bcafc3e458c78270529c7b916a2c5a01efb314aef04889866756810abfe3b6a63a596b569a WHIRLPOOL 2ba71cbc8c746bd95214d31503fcf3ac7badd7a9be2faf9d3fa58665f9604ce205433890e3dc837368ba43af4a46d4068492c813f783813de816a0c5268cdbbb
-EBUILD libgda-5.2.2.ebuild 4358 SHA256 c175d153614f70718e3337778d982f3f902736e356e9618c7335d8222ed035c1 SHA512 63929f136755779096527d9ca529ab0ca0f7889a591e70b1e00ff903b3dd7eeb029f4a74e25c1a7c3c4f7839589da7cf34455d0395480dc85053dd49ba518e16 WHIRLPOOL 7a561e49b0322fe89d1340bed0c873c88229c7f5878bcfbe0eebd49228b1e7b13ad1c42f99d9976b4ca8e8bc15caa966f99b447b5907cc4287b5d5584e11fdc4
-MISC ChangeLog 34834 SHA256 63be9b446d28ec128c15e6f7b92f722b9703381988a1e9d872bf018766294845 SHA512 0d414ef1bc5aa1c8000fab143a06e668b8050b5eabb34822d5b6c5b0fa8b48d173b5bbace816bbdd06fb3cdcc083f3e141858219742246ffbcbd492fddeef69f WHIRLPOOL 1aa8da9b684c9c0ab9751bbac406a4f031e17360a2fa713af28bd24c1431357e2355af4233f737eff0f270d896d843725ae0aec58c2b68d8d00e5fb1d74d4d9f
+EBUILD libgda-4.2.13.ebuild 3081 SHA256 6d12118265b8dec48b7ccdf8f65d10fdffd543b201e23ad185d0d6da212bc66a SHA512 f911d06e3f008f2d71c116757833d19059b52af6cc1a0b006e0b687c8556bbf7f8f5d5df910426c87215cf9f608b3513446347e1f941808d5a906c323280b10e WHIRLPOOL 6ddf356d15664e11537eb8e100352e4fb2693f531e086f0dcb8888ef3952728a0b6844fefc13334d76dc6bdc97e27778b13e09e917a74d24f7a26ef57c20c834
+EBUILD libgda-5.2.2.ebuild 4359 SHA256 21c8018b01ceb5ba11790a3e69f5e55550056dc210d527cbe3ba2f851f1f568f SHA512 0b7ab0e053fb3d5625726b19fd83e771cee779cc972e6367b2fed0fb1c807aed2071e5e9b615756d2c1fdbedf52c85065189121ac9a8e8c73ef738027b80fc6d WHIRLPOOL 1d5beab9982c47c8bc029e02c650b5e54272e979801a73b3618711dbe2996e5cf9e01c60f79025ed01848712e7952d760347f56b244b508af72457c9dadc1cd1
+MISC ChangeLog 35011 SHA256 c2fdcc4395070eff6f0f84736cfe9664f053a839e12f3fe16a6f0557988e7c87 SHA512 18ae0f820ccde3480d8a2b11541c8743036e1c0e1edce5b858adffd7c2aa19ffdb41da3c1d9e1d1f997579591dcdb0e096af77d00f543f47e49df6b47a366a85 WHIRLPOOL ff66c7c896c555b2a9f99be301bf6ad80c870e180793a59724bd387b1167b82ab23c3e040edf2c03ce75468dd7ae36396e79279d2bcb4fe037fc745fdd33086f
 MISC metadata.xml 908 SHA256 950b0cbb48f8f9254e4457efc8d4e290edcc814a1b07dfb85eb0d61b077bfc4c SHA512 e9b04c54efd1d15fed1e3820e0b5ccb9c6bd8260deabc9e850278132906263e18f4156598b3bafc26ef57ae0e83a95a6560e182bf7b3c63db045611ee36549b7 WHIRLPOOL d8f28595e61688646263d534b60235072294c96a62f1c86bd42a83ce481dc584c4939ad354b55718169c64522656d135ab4f0733db2a9fa05e27a6490aff3e5c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlNcETIACgkQCaWpQKGI+9QgegCdHpg0o7t7fW7gTZC+E0DSWQMY
-V4QAnRzDkTbPblCQ7bzyo+r0sVb5m5jw
-=HxoD
+iF4EAREIAAYFAlRXeTYACgkQVxOqA9G7/aDG+QEAk+J9E+iHXHkhp/AfQXtRWtGH
+govbwGctvKU8IEKDnFcA/iRd7w8/uxFjZLNJ+Y4afYdPwtQnLUH5OhxpHpt4o8mH
+=RN0e
 -----END PGP SIGNATURE-----
