@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/libgda
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgda/ChangeLog,v 1.226 2014/04/26 20:04:01 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgda/ChangeLog,v 1.227 2014/11/03 12:46:44 titanofold Exp $
+
+  03 Nov 2014; Aaron W. Swenson <titanofold@gentoo.org> libgda-4.2.13.ebuild,
+  libgda-5.2.2.ebuild:
+  Update PostgreSQL dependencies and/or checks to virtual/postgresql.
 
   26 Apr 2014; Pacho Ramos <pacho@gentoo.org> -libgda-5.0.3-r1.ebuild,
   -libgda-5.0.4.ebuild:
